--- a/package.json
+++ b/package.json
@@ -6,23 +6,23 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check": "biome check src",
+    "format": "biome check --write src"
   },
   "dependencies": {
+    "next": "15.3.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.3.1"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "5.8.3",
+    "@biomejs/biome": "1.9.4",
+    "@tailwindcss/postcss": "4.1.4",
     "@types/node": "20.17.31",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
-    "@tailwindcss/postcss": "4.1.4",
     "tailwindcss": "4.1.4",
-    "eslint": "9.25.1",
-    "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "3.3.1"
+    "typescript": "5.8.3"
   },
   "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
 }
