--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "check": "biome check src",
-    "format": "biome check --write src"
+    "format": "biome check --write src",
+    "commit": "commit",
+    "prepare": "husky"
   },
   "dependencies": {
     "next": "15.3.1",
@@ -17,10 +19,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@commitlint/cli": "19.8.0",
+    "@commitlint/config-conventional": "19.8.0",
+    "@commitlint/prompt-cli": "19.8.0",
     "@tailwindcss/postcss": "4.1.4",
     "@types/node": "20.17.31",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
+    "husky": "9.1.7",
     "tailwindcss": "4.1.4",
     "typescript": "5.8.3"
   },
