--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "check": "biome check src",
     "format": "biome check --write src",
     "commit": "commit",
-    "prepare": "husky"
+    "prepare": "husky",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "next": "15.3.1",
@@ -19,16 +21,31 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@chromatic-com/storybook": "3",
     "@commitlint/cli": "19.8.0",
     "@commitlint/config-conventional": "19.8.0",
     "@commitlint/prompt-cli": "19.8.0",
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/addon-onboarding": "8.6.12",
+    "@storybook/blocks": "8.6.12",
+    "@storybook/experimental-addon-test": "8.6.12",
+    "@storybook/experimental-nextjs-vite": "8.6.12",
+    "@storybook/react": "8.6.12",
+    "@storybook/test": "8.6.12",
     "@tailwindcss/postcss": "4.1.4",
     "@types/node": "20.17.31",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
+    "@vitest/browser": "3.1.2",
+    "@vitest/coverage-v8": "3.1.2",
+    "autoprefixer": "10.4.21",
     "husky": "9.1.7",
-    "tailwindcss": "4.1.4",
-    "typescript": "5.8.3"
+    "playwright": "1.52.0",
+    "postcss": "8.5.3",
+    "storybook": "8.6.12",
+    "tailwindcss": "3.4.17",
+    "typescript": "5.8.3",
+    "vitest": "3.1.2"
   },
   "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
 }
