--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "clsx": "2.1.1",
+    "echarts-for-react": "3.0.2",
     "next": "15.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
