--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "clsx": "2.1.1",
     "echarts-for-react": "3.0.2",
+    "just-clone": "6.2.0",
     "next": "15.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
