--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-alpha.8",
     "clsx": "2.1.1",
     "echarts-for-react": "3.0.2",
     "just-clone": "6.2.0",
