--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@base-ui-components/react": "1.0.0-alpha.8",
     "clsx": "2.1.1",
     "echarts-for-react": "3.0.2",
+    "jotai": "2.12.4",
     "just-clone": "6.2.0",
     "next": "15.3.1",
     "react": "19.1.0",
