--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "just-clone": "6.2.0",
     "next": "15.3.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-spring-bottom-sheet": "3.4.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
